# app/models/Stock.rb
@@ -1,3 +1,14 @@
 class Stock < ApplicationRecord
-  
+  def rentability
+    RentabilityCalculatorService.calc_rentability(self)
+  end
+
+  def as_json(options = {})
+    {
+      symbol: self.symbol,
+      date: self.date,
+      price: self.price,
+      rentability: rentability
+    }
+  end
 end
